--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -162,12 +162,12 @@ div {
 
 #rightBannersContentMid {
   background-color: white;
-  height: 500px;
+  height: 350px;
 }
 
 #rightBannersContentBot{
   background-color: white;
-  height: 250px;
+  height: 400px;
 
 }
 
@@ -320,6 +320,11 @@ div {
   height: 50px;
   background-color: white;
   border: 1px solid #ccc;
+}
+
+.results{
+  position: relative;
+  top: -35px;
 }
 
 #koreaMap{
@@ -575,7 +580,6 @@ div {
   position: relative;
   font-size: 0.5em;
   top: -5px;
-  
 }
 
 .map-div-h6{
