--- a/src/main/resources/static/css/userstyle.css
+++ b/src/main/resources/static/css/userstyle.css
@@ -2,3 +2,19 @@
 	width:1200px;
 	margin: auto;
 }
+
+#loginForm {
+	text-align: center;	
+}
+
+#loginBtn {
+  background: url("/static/image/signin.png") no-repeat;
+  width: 228px;
+  height: 37px;
+}
+
+#loginBtn:active {
+  background: url("/static/image/signin_click.png") no-repeat;
+  width: 228px;
+  height: 37px;
+}
