--- a/src/main/resources/static/css/applinkstyle.css
+++ b/src/main/resources/static/css/applinkstyle.css
@@ -19,3 +19,21 @@
   width: 228px;
   height: 37px;
 }
+
+#appDesign{
+	background-color: rgba(192, 192, 192, 0.7);
+	width: 800px;
+	height:900px;
+	
+}
+
+#MV{
+	margin-top: 30px;
+	 margin-bottom: 30px;
+}
+
+.heSay{
+	
+	font-style: italic;
+	 margin-bottom: 20px;
+}
