--- a/src/main/resources/static/css/finedustStyle.css
+++ b/src/main/resources/static/css/finedustStyle.css
@@ -1,3 +1,22 @@
+button {
+	padding: 10px 20px;
+	font-size: 16px;
+	cursor: pointer;
+	border: none;
+	border-radius: 5px;
+	background-color: #007bff;
+	color: #fff;
+	margin: 5px;
+}
+
+button:hover {
+	background-color: #0056b3;
+}
+
+button:active {
+	background-color: #004080;
+}
+
 #pageBox {
 	width: 1200px;
 	margin: auto;
@@ -74,8 +93,9 @@
 #regionButtonBox {
 	position: relative;
 	width: 100%;
-	height: 10%;
+	height: 5%;
 	z-index: 999;
+	justify-content: center;
 }
 
 #dustGraphBox {
@@ -160,4 +180,25 @@
 #resultImage {
 	width: 600px;
 	height: 650px;
+}
+
+#graphTitle {
+	text-align: center;
+	line-height: 200%;
+	font-size: 24px;
+}
+
+#gradeTableBox{
+	width:100%;
+	height:40%;
+	text-align : center;
+}
+
+#gradeTable{
+	display : inline-block;
+}
+
+#sourceExplainBox{
+	text-align : right;
+	border-top: 1px solid black;
 }
